added playlist search

--- a/views/main.html
+++ b/views/main.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Main Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/styles.css">
 </head>
+
 <body>
   <h1>Welcome</h1>
 
@@ -33,5 +35,16 @@
     <button type="submit">Search</button>
   </form>
 
+  <hr>
+
+  <!-- Search Form -->
+  <form action="/search-playlist" method="get">
+    <label for="query">Search Playlist:</label><br>
+    <input type="text" name="q" required>
+    <button type="submit">Search Playlist</button>
+  </form>
+
+
 </body>
+
 </html>
