--- a/views/video.html
+++ b/views/video.html
@@ -19,7 +19,8 @@
       const iframe = document.createElement('iframe');
       iframe.width = "720";
       iframe.height = "400";
-      iframe.src = `https://www.youtube.com/embed/${videoId}`;
+      // iframe.src = `https://www.youtube.com/embed/${videoId}`;
+      iframe.src = `https://www.videoken.com/embed/videoID=${videoId}`;
       iframe.allow = "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture";
       iframe.allowFullscreen = true;
       document.getElementById('videoContainer').appendChild(iframe);
