--- a/views/video.html
+++ b/views/video.html
@@ -20,7 +20,7 @@
       iframe.width = "720";
       iframe.height = "400";
       // iframe.src = `https://www.youtube.com/embed/${videoId}`;
-      iframe.src = `https://www.videoken.com/embed/videoID=${videoId}`;
+      iframe.src = `https://videoken.com/embed?videoID=${videoId}`;
       iframe.allow = "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture";
       iframe.allowFullscreen = true;
       document.getElementById('videoContainer').appendChild(iframe);
